[project]
name = "gst_realsense"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "chuntsehsu@gmail.com"},
]
dependencies = [
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
