[project]
name = "gst_realsense"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "chuntsehsu@gmail.com"},
]
dependencies = [
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "numpy<2.0",
    "lz4>=4.4.5",
    "pyrealsense2>=2.56.5.9235",
    "msgpack>=1.1.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.12",
]

[tool.pdm]
distribution = false


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
